# ucapture

./: .gitignore  CLAUDE.md  SESSION-NOTES.md  SESSION_NOTES.md  run.sh
cloudflare-audio-processor/audio-processor-gcp/: .gcloudignore  Dockerfile  cloudbuild.yaml  pyproject.toml  requirements.txt
cloudflare-audio-processor/audio-processor-gcp/audio_processor/: __init__.py  main.py  pipeline.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/asr/: __init__.py  interface.py  postprocess.py  registry.py  speechmatics.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/audio/: __init__.py  denoise.py  transcode.py  vad.py  wav_utils.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/emotion/: __init__.py  google_nl.py  interface.py  runner.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/observability/: __init__.py  logger.py  metrics.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/queue/: __init__.py  consumer.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/storage/: __init__.py  d1_client.py  r2_client.py
cloudflare-audio-processor/audio-processor-gcp/audio_processor/utils/: __init__.py  (+2 more)
cloudflare-audio-processor/audio-processor-gcp/tests/: test_asr_interface.py  test_asr_registry.py  test_consumer.py  test_d1_client.py  test_denoise.py  test_emotion.py  test_main.py  test_metrics.py  test_models.py  test_pipeline.py  test_postprocess.py  test_r2_client.py  test_retry.py  test_scaffold.py  test_speechmatics.py  test_transcode.py  test_vad.py  test_wav_utils.py
(+227 files in other folders)
